--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,20 @@
     "license": "MIT",
     "require": {
         "php": "^7.4 || ^8.0",
-        "sylius/sylius": "^1.10"
-    },
-    "conflict": {
-        "api-platform/core": "^2.6"
+        "knplabs/knp-snappy-bundle": "^1.8",
+        "ramsey/uuid": "^3.9",
+        "sylius/grid-bundle": "^1.7",
+        "sylius/resource-bundle": "^1.6",
+        "sylius/sylius": "^1.10",
+        "symfony/config": "^5.3",
+        "symfony/dependency-injection": "^5.3",
+        "symfony/form": "^5.3",
+        "symfony/framework-bundle": "^5.3",
+        "symfony/http-foundation": "^5.3",
+        "symfony/http-kernel": "^5.3",
+        "symfony/messenger": "^5.3",
+        "symfony/options-resolver": "^5.3",
+        "symfony/routing": "^5.3"
     },
     "require-dev": {
         "behat/behat": "^3.6.1",
@@ -37,11 +47,11 @@
         "phpunit/phpunit": "^9.5",
         "sensiolabs/security-checker": "^6.0",
         "sylius-labs/coding-standard": "^3.1",
-        "symfony/browser-kit": "^4.4 || ^5.2",
-        "symfony/debug-bundle": "^4.4 || ^5.2",
-        "symfony/dotenv": "^4.4 || ^5.2",
-        "symfony/intl": "^4.4 || ^5.2",
-        "symfony/web-profiler-bundle": "^4.4 || ^5.2",
+        "symfony/browser-kit": "^5.3",
+        "symfony/debug-bundle": "^5.3",
+        "symfony/dotenv": "^5.3",
+        "symfony/intl": "^5.3",
+        "symfony/web-profiler-bundle": "^5.3",
         "vimeo/psalm": "4.4.1"
     },
     "config": {
@@ -49,7 +59,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "0-dev"
         }
     },
     "autoload": {
