feature: add the button to download delivery slip next to the invoice button

--- a/composer.json
+++ b/composer.json
@@ -9,50 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.4 || ^8.0",
-        "knplabs/knp-snappy-bundle": "^1.8",
-        "ramsey/uuid": "^3.9",
-        "sylius/grid-bundle": "^1.7",
-        "sylius/resource-bundle": "^1.6",
-        "sylius/sylius": "^1.10",
-        "symfony/config": "^5.3",
-        "symfony/dependency-injection": "^5.3",
-        "symfony/form": "^5.3",
-        "symfony/framework-bundle": "^5.3",
-        "symfony/http-foundation": "^5.3",
-        "symfony/http-kernel": "^5.3",
-        "symfony/messenger": "^5.3",
-        "symfony/options-resolver": "^5.3",
-        "symfony/routing": "^5.3"
+        "sylius/invoicing-plugin": "^0.18"
     },
     "require-dev": {
-        "behat/behat": "^3.6.1",
-        "behat/mink-selenium2-driver": "^1.4",
-        "dmore/behat-chrome-extension": "^1.3",
-        "dmore/chrome-mink-driver": "^2.7",
-        "friends-of-behat/mink": "^1.8",
-        "friends-of-behat/mink-browserkit-driver": "^1.4",
-        "friends-of-behat/mink-extension": "^2.4",
-        "friends-of-behat/page-object-extension": "^0.3",
-        "friends-of-behat/suite-settings-extension": "^1.0",
-        "friends-of-behat/symfony-extension": "^2.1",
-        "friends-of-behat/variadic-extension": "^1.3",
-        "friendsofsymfony/oauth-server-bundle": "^1.6 || >2.0.0-alpha.0 ^2.0@dev",
-        "lakion/mink-debug-extension": "^2.0.0",
-        "phpspec/phpspec": "^7.0",
         "phpstan/extension-installer": "^1.0",
         "phpstan/phpstan": "0.12.74",
         "phpstan/phpstan-doctrine": "0.12.31",
         "phpstan/phpstan-strict-rules": "^0.12.0",
         "phpstan/phpstan-webmozart-assert": "0.12.12",
         "phpunit/phpunit": "^9.5",
-        "sensiolabs/security-checker": "^6.0",
         "sylius-labs/coding-standard": "^3.1",
-        "symfony/browser-kit": "^5.3",
-        "symfony/debug-bundle": "^5.3",
-        "symfony/dotenv": "^5.3",
-        "symfony/intl": "^5.3",
-        "symfony/web-profiler-bundle": "^5.3",
-        "vimeo/psalm": "4.4.1"
     },
     "config": {
         "sort-packages": true
