--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     },
     "require-dev": {
         "phpstan/extension-installer": "^1.0",
-        "phpstan/phpstan": "0.12.74",
-        "phpstan/phpstan-doctrine": "0.12.31",
-        "phpstan/phpstan-strict-rules": "^0.12.0",
-        "phpstan/phpstan-webmozart-assert": "0.12.12",
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-doctrine": "^0.12",
+        "phpstan/phpstan-strict-rules": "^0.12",
+        "phpstan/phpstan-webmozart-assert": "^0.12",
         "phpunit/phpunit": "^9.5",
         "sylius-labs/coding-standard": "^3.1"
     },
